<resources>
    <string name="app_name">kriptopara</string>
    <string name="default_notification_channel_id" translatable="false">1</string>
    <string name="error_occurred">An error occurred</string>
    <string name="retry">Retry</string>
    <string name="open_libraries">Used open source libraries</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="rate_us">Rate Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="cointelegraph" translatable="false">CoinTelegraph</string>
    <string name="cointelegraph_editors_pick" translatable="false">Cointelegraph Editor\\\'s Pick</string>
    <string name="coinpedia" translatable="false">Coinpedia</string>
    <string name="coindesk" translatable="false">Coindesk</string>
    <string name="coinzene" translatable="false">Coinzene</string>
    <string name="coinspeaker" translatable="false">CoinSpeaker</string>
    <string name="cryptopotato" translatable="false">CryptoPotato</string>
    <string name="rank">Rank</string>
    <string name="most_gained">Gainers</string>
    <string name="losers">Losers</string>
    <string name="market_cap">Market Cap</string>
    <string name="alphabetical">Alphabetical Order</string>
    <string name="alphabetical_reverse">Alphabetical Order Reverse</string>
    <string name="favorites">Favorites</string>
    <string name="select_currency">Select Currency</string>
    <string name="max_supply">Max Supply</string>
    <string name="volume_24_hr">Volume (last 24 hours)</string>
    <string name="supply">Supply</string>
    <string name="vwap_24_hr">Vwap (last 24 hours)</string>
    <string name="tab_prices">Prices</string>
    <string name="tab_news">News</string>
    <string name="tab_converter">Converter</string>
    <string name="tab_settings">Settings</string>
    <string name="currency_1">Currency 1</string>
    <string name="currency">Currency</string>
    <string name="currency_2">Currency 2</string>
    <string name="currency_3">Currency 3</string>
    <string name="currency_4">Currency 4</string>
    <string name="one_min">1 minute</string>
    <string name="five_min">5 minutes</string>
    <string name="fifteen_min">15 minutes</string>
    <string name="thirty_min">30 minutes</string>
    <string name="one_hour">1 hour</string>
    <string name="six_hrs">6 hours</string>
    <string name="twelve_hrs">12 hours</string>
    <string name="one_day">1 day</string>
    <string name="details">Details</string>
    <string name="markets">Markets</string>
    <string name="select_language">Select Language</string>
    <string name="turkish">Turkish</string>
    <string name="english">English</string>
    <string name="french">French</string>
    <string name="tab_price_text">Price</string>
    <string name="tab_candle_text">Candle</string>
    <string name="tab_volume_text">Volume</string>
    <string name="sort">Sort</string>
    <string name="topic_subscribe">kriptopara-en</string>
    <string name="topic_unsubscribe_1">kriptopara-tr</string>
    <string name="topic_unsubscribe_2">kriptopara-fr</string>
</resources>