<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

    <com.batuhan.cryptocurrencyapp.core.views.CryptoCurrencyCardView
        android:id="@+id/graph_info_card"
        android:layout_width="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/graph_graph_card"
        android:layout_height="60dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/graph_state"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingStart="12dp"
                android:paddingEnd="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/ic_circle_minus_24">

            </ImageView>

            <TextView
                android:id="@+id/graph_name"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="start|center_vertical"
                android:paddingHorizontal="4dp"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/graph_price_and_change"
                app:layout_constraintStart_toEndOf="@id/graph_state"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Bitcoin"
                tools:textColor="@color/black">

            </TextView>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/graph_price_and_change"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:paddingHorizontal="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/graph_favorite_item"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/graph_price"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="end"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toTopOf="@id/graph_change"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="packed"
                    tools:text="0.00064"
                    tools:textColor="@color/black">

                </TextView>

                <TextView
                    android:id="@+id/graph_change"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="end"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/graph_price"
                    tools:text="0.00064"
                    tools:textColor="@color/black">

                </TextView>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <ImageView
                android:id="@+id/graph_favorite_item"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingStart="4dp"
                android:paddingEnd="12dp"
                android:src="@drawable/ic_favorite_border_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:tint="@color/black">

            </ImageView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.batuhan.cryptocurrencyapp.core.views.CryptoCurrencyCardView>

    <com.batuhan.cryptocurrencyapp.core.views.CryptoCurrencyCardView
        android:id="@+id/graph_graph_card"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:padding="10dp"
        android:visibility="visible"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@id/graph_tab_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/graph_info_card"
        app:layout_constraintVertical_bias="0.0"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.patrykandpatrick.vico.views.chart.ChartView
                android:id="@+id/graph_chart_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp"
                android:visibility="invisible"
                app:chart="line"
                app:showStartAxis="true" />

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/graph_progress_indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:progress="40"
                app:indicatorColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:trackColor="@color/white"
                app:trackThickness="4dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.batuhan.cryptocurrencyapp.core.views.CryptoCurrencyCardView>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/graph_tab_layout"
        android:layout_width="0dp"
        android:gravity="start"
        app:layout_constraintStart_toStartOf="@id/graph_graph_card"
        app:layout_constraintEnd_toEndOf="@id/graph_graph_card"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/graph_graph_card"
        app:tabIndicator="@drawable/tab_layout_selected_item"
        app:tabIndicatorColor="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:tabIndicatorHeight="48dp"
        app:tabMode="scrollable"
        app:tabRippleColor="@null"
        app:tabSelectedTextColor="@color/black"
        app:tabTextAppearance="@style/TabTextAppearance"
        app:tabTextColor="@color/black">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="interval_0"

            android:text="@string/one_min" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="interval_1"
            android:text="@string/five_min" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="interval_2"

            android:text="@string/fifteen_min" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="interval_3"
            android:text="@string/thirty_min" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="interval_4"

            android:text="@string/one_hour" />

        <com.google.android.material.tabs.TabItem

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="interval_5"
            android:text="@string/six_hrs" />

        <com.google.android.material.tabs.TabItem

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="interval_6"

            android:text="@string/twelve_hrs" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="interval_7"
            android:text="@string/one_day" />
    </com.google.android.material.tabs.TabLayout>


</androidx.constraintlayout.widget.ConstraintLayout>