<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".presentation.converter.CurrencyConverterFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/currency_input_1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/currency_1"
        android:padding="8dp"
        app:boxStrokeColor="@color/black"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toStartOf="@id/currency_select_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

        <com.batuhan.cryptocurrencyapp.core.views.CryptoCurrencyEditText
            android:id="@+id/input_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="numberDecimal" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/currency_select_1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:hint="@string/currency"
        android:padding="8dp"
        app:boxStrokeColor="@color/black"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.batuhan.cryptocurrencyapp.core.views.CryptoCurrencyEditText
            android:id="@+id/currency_select_input_1"
            android:clickable="true"
            android:cursorVisible="false"
            android:focusable="false"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/currency_input_2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/currency_2"
        android:padding="8dp"
        app:boxStrokeColor="@color/black"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toStartOf="@id/currency_select_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/currency_input_1">

        <com.batuhan.cryptocurrencyapp.core.views.CryptoCurrencyEditText
            android:id="@+id/input_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:inputType="numberDecimal" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/currency_select_2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:hint="@string/currency"
        android:padding="8dp"
        app:boxStrokeColor="@color/black"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/currency_select_1">

        <com.batuhan.cryptocurrencyapp.core.views.CryptoCurrencyEditText
            android:id="@+id/currency_select_input_2"
            android:layout_width="match_parent"
            android:clickable="true"
            android:cursorVisible="false"
            android:focusable="false"
            android:layout_height="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/currency_input_3"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/currency_3"
        android:padding="8dp"
        app:boxStrokeColor="@color/black"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toStartOf="@id/currency_select_3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/currency_input_2">

        <com.batuhan.cryptocurrencyapp.core.views.CryptoCurrencyEditText
            android:id="@+id/input_3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:inputType="numberDecimal" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/currency_select_3"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:hint="@string/currency"
        android:inputType="numberDecimal"
        android:padding="8dp"
        app:boxStrokeColor="@color/black"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/currency_select_2">

        <com.batuhan.cryptocurrencyapp.core.views.CryptoCurrencyEditText
            android:id="@+id/currency_select_input_3"
            android:clickable="true"
            android:cursorVisible="false"
            android:focusable="false"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/currency_input_4"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/currency_4"
        android:padding="8dp"
        app:boxStrokeColor="@color/black"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toStartOf="@id/currency_select_4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/currency_input_3">

        <com.batuhan.cryptocurrencyapp.core.views.CryptoCurrencyEditText
            android:id="@+id/input_4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:inputType="numberDecimal" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/currency_select_4"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:hint="@string/currency"
        android:padding="8dp"
        app:boxStrokeColor="@color/black"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/currency_select_3">

        <com.batuhan.cryptocurrencyapp.core.views.CryptoCurrencyEditText
            android:id="@+id/currency_select_input_4"
            android:clickable="true"
            android:cursorVisible="false"
            android:focusable="false"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.davidmiguel.numberkeyboard.NumberKeyboard
        android:id="@+id/number_keyboard"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/currency_select_4"
        app:numberkeyboard_keyHeight="70dp"
        app:numberkeyboard_keyWidth="70dp"
        app:numberkeyboard_keyboardType="custom"
        app:numberkeyboard_leftAuxBtnBackground="@color/white"
        app:numberkeyboard_leftAuxBtnIcon="@drawable/ic_comma"
        app:numberkeyboard_numberKeyBackground="@color/white"
        app:numberkeyboard_numberKeyTextColor="@color/black"
        app:numberkeyboard_numberKeyTypeface="@font/nunito_medium"
        app:numberkeyboard_rightAuxBtnBackground="@color/white"
        app:numberkeyboard_rightAuxBtnIcon="@drawable/ic_backspace_24" />


</androidx.constraintlayout.widget.ConstraintLayout>